refactored getNextEndpoint by introducing another method to get the next index